# visagate

./: CHANGELOG.md  PKGBUILD  README.md  facegate-v0.2.0.patch  install.sh  pyproject.toml
facegate/: __init__.py  camera.py  cli.py  config.py  logging_setup.py  pam_helper.py  recognizer.py  security.py
